--- a/drishti_app/src/index.css
+++ b/drishti_app/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.title {
+  display: inline-block;
+  padding: 30px 60px;
+  background: lavender;
+  border-radius: 8px;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+
+.subtitle {
+  display: inline-block;
+  color: darkgrey;
+  font-weight: normal;
+  padding-bottom: 1px solid white;
+  margin-top: 10px;
+  margin-bottom: 60px;
+}
