new folders for additional boards and entries

--- a/drishti_app/src/index.css
+++ b/drishti_app/src/index.css
@@ -30,3 +30,12 @@ code {
   margin-top: 10px;
   margin-bottom: 60px;
 }
+
+.board-title {
+  display: inline-block;
+  padding: 15px 30px;
+  background: lavender;
+  border-radius: 8px;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
