--- a/drishti_app/src/index.css
+++ b/drishti_app/src/index.css
@@ -31,10 +31,10 @@ code {
   margin-bottom: 60px;
 }
 
-.board-title {
+.boardTitle {
   display: inline-block;
-  padding: 15px 30px;
-  background: lavender;
+  padding: 10px 20px;
+  background: rgb(228, 210, 224);
   border-radius: 8px;
   font-weight: normal;
   margin-bottom: 10px;
